@@ -16,9 +16,13 @@ import org.opentripplanner.model.GenericLocation;
 import org.opentripplanner.routing.api.request.RouteRequest;
 import org.opentripplanner.routing.graph.Graph;
 import org.opentripplanner.routing.impl.GraphPathFinder;
+import org.opentripplanner.routing.linking.LinkingContextFactory;
+import org.opentripplanner.routing.linking.TemporaryVerticesContainer;
+import org.opentripplanner.routing.linking.VertexLinkerTestFactory;
+import org.opentripplanner.routing.linking.internal.VertexCreationService;
+import org.opentripplanner.routing.linking.mapping.LinkingContextRequestMapper;
 import org.opentripplanner.street.model.edge.Edge;
 import org.opentripplanner.street.model.vertex.Vertex;
-import org.opentripplanner.street.search.TemporaryVerticesContainer;
 import org.opentripplanner.street.search.state.State;
 import org.opentripplanner.test.support.ResourceLoader;
 
@@ -59,15 +63,24 @@ class WalkRoutingTest {
     var end = GenericLocation.fromCoordinate(59.94641, 10.77522);
     var base = dateTime.truncatedTo(ChronoUnit.SECONDS);
     var time = base.plusMillis(offset);
-    var results = route(roundabout, start, end, time, true);
-    assertEquals(1, results.size());
-    var states = results.get(0).states;
-    var diff = ChronoUnit.MILLIS.between(
-      states.getFirst().getTimeAccurate(),
-      states.getLast().getTimeAccurate()
+    var forwardResults = route(roundabout, start, end, time, false);
+    assertEquals(1, forwardResults.size());
+    var forwardStates = forwardResults.getFirst().states;
+    var forwardDiff = ChronoUnit.MILLIS.between(
+      forwardStates.getFirst().getTimeAccurate(),
+      forwardStates.getLast().getTimeAccurate()
+    );
+    var backwardResults = route(roundabout, start, end, time, true);
+    assertEquals(1, backwardResults.size());
+    var backwardStates = forwardResults.getFirst().states;
+    var backwardDiff = ChronoUnit.MILLIS.between(
+      backwardStates.getFirst().getTimeAccurate(),
+      backwardStates.getLast().getTimeAccurate()
     );
     // should be same for every parametrized offset, otherwise irrelevant
-    assertEquals(13926, diff);
+    int expected = 10430;
+    assertEquals(expected, forwardDiff);
+    assertEquals(expected, backwardDiff);
   }
 
   private static List<GraphPath<State, Edge, Vertex>> route(
@@ -83,18 +96,14 @@ class WalkRoutingTest {
       .withTo(to)
       .withArriveBy(arriveBy)
       .buildRequest();
-
-    try (
-      var temporaryVertices = new TemporaryVerticesContainer(
-        graph,
-        request.from(),
-        request.to(),
-        request.journey().direct().mode(),
-        request.journey().direct().mode()
-      )
-    ) {
+    try (var temporaryVerticesContainer = new TemporaryVerticesContainer()) {
+      var vertexLinker = VertexLinkerTestFactory.of(graph);
+      var vertexCreationService = new VertexCreationService(vertexLinker);
+      var linkingContextFactory = new LinkingContextFactory(graph, vertexCreationService);
+      var linkingRequest = LinkingContextRequestMapper.map(request);
+      var linkingContext = linkingContextFactory.create(temporaryVerticesContainer, linkingRequest);
       var gpf = new GraphPathFinder(null);
-      return gpf.graphPathFinderEntryPoint(request, temporaryVertices);
+      return gpf.graphPathFinderEntryPoint(request, linkingContext);
     }
   }
 }
